<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:stretchColumns="3"
        >

        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_server_host"/>
            <EditText
                android:id="@+id/serverHost"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>
        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_server_port"/>
            <EditText
                android:id="@+id/serverPort"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>


        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_username"/>
            <EditText
                android:id="@+id/username"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_password"/>
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:imeActionLabel="@string/log_in"
                android:layout_span="3"/>
        </TableRow>


        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_first_name"/>
            <EditText
                android:id="@+id/firstName"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_last_name"/>
            <EditText
                android:id="@+id/lastName"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>
            <TextView
                android:gravity="end"
                android:text="@string/prompt_email"/>
            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:layout_span="3"/>
        </TableRow>

        <TableRow>

            <TextView
                android:gravity="center_vertical|end"
                android:layout_height="match_parent"
                android:text="@string/prompt_gender"
                />

            <RadioGroup
                android:id="@+id/gender"
                android:orientation="horizontal"
                android:layout_span="3">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="48dp">
            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/log_in"
                />
            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/register"/>

        </LinearLayout>


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </TableLayout>
</ScrollView>
