<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#444"/>
        <ExpandableListView
            android:id="@+id/expandableListView"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:dividerHeight="0.5dp"
            android:divider="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.PersonActivity"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>